@@ -17,6 +17,7 @@ This file lists the incompatible changes between Version 2.x and older versions
     suminf_bitprec (precision in bits) rather than the historical suminf
     (precision in words)
   - renamed libpari function rootsof1 -> nfrootsof1
+  - renamed libpari function isirreducible -> polisirreducible
   - removed libpari function rootsof1_kannan: use nfrootsof1
 
 * Specific to the PARI library:
