@@ -4581,11 +4581,11 @@ GEN     ginvmod(GEN x, GEN y);
 GEN     glcm(GEN x, GEN y);
 GEN     glcm0(GEN x, GEN y);
 GEN     idealfactorback(GEN nf, GEN L, GEN e, int red);
-long    isirreducible(GEN x);
 GEN     newtonpoly(GEN x, GEN p);
 GEN     nffactorback(GEN nf, GEN L, GEN e);
 GEN     nfrootsQ(GEN x);
 GEN     poldisc0(GEN x, long v);
+long    polisirreducible(GEN x);
 GEN     polresultant0(GEN x, GEN y,long v,long flag);
 GEN     polsym(GEN x, long n);
 GEN     primitive_part(GEN x, GEN *c);
