@@ -5,7 +5,8 @@ BA   1- plotlines flag was ignored
      2- fileopen(,"w" or "a") was bypassing the check for 'secure' default
 
   Changed
-     1- renamed libpari function rootsof1 -> nfrootsof1
+     1- [libpari] renamed rootsof1 -> nfrootsof1
+     2- [libpari] renamed isirreducible -> polisirreducible
 
   Added
      1- new GP function rootsof1
